getting app settings

--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -51,9 +51,11 @@ jobs:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
         ARTIFACT_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.artifact-name, ', ') }}
+        APP_SETTINGS: ${{ join(fromJSON(toJSON(matrix)).tenant_details.app-settings.*.name, ', ') }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
         echo "MATRIX: $MATRIX"
         echo "APPNAME: [$APP_NAME]"
         echo "ARTIFACT NAME: [$ARTIFACT_NAME]"
+        echo "APP SETTINGS: [$APP_SETTINGS]"
 #        echo "NESTED: [$NESTED]"
