using format function

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -16,7 +16,7 @@ jobs:
           publish-profile: ${{ secrets.PUBLISH_PROFILE }}
 
       - name: 'Echoing secret'
-        run: echo "Secret is ${{ secrets.PUBLISH_PROFILE }} "
+        run: echo "Secret name is $format('{0} {1}', 'secrets.', 'PUBLISH_PROFILE') and value is ${{ format('{0} {1}', 'secrets.', 'PUBLISH_PROFILE') }} "
 
 
 
