using format function for secret va rname

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -13,10 +13,10 @@ jobs:
       - name: 'Added a secret'
         uses: actions/checkout@v2
         with:
-          publish-profile: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
+          publish_profile: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
 
       - name: 'Echoing secret'
-        run: echo "Secret name is $publish-profile  "
+        run: echo "Secret name is $publish_profile  "
 
 
 
