Added a main workflow that passes teh secret to child workflow

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -1,9 +1,9 @@
 name: Formatting secret
 on: 
-  push:
-    # secrets:
-    #   PUBLISH-PROFILE:
-    #     required: true
+  workflow_call:
+    secrets:
+      PUBLISH-PROFILE:
+        required: true
 
 jobs:
   format-secret:
@@ -13,7 +13,7 @@ jobs:
       - name: 'Added a secret'
         uses: actions/checkout@v2
         with:
-          publish_profile: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
+          publish_profile: ${{ secrets.PUBLISH-PROFILE }}
 
       - name: 'Echoing secret'
         run: echo "Secret name is $publish_profile  "
