--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -7,8 +7,7 @@ jobs:
       Greeting: Hello
       First_Name: Mona    
     steps:
-      - name: "Run child workflow"
-        uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+      - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
         with:
           PUBLISH_PROFILE: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
           
