--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     steps:
-      - name: 'Added a secret'
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           publish_profile: ${{ secrets.PUBLISH-PROFILE }}
 
