--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -1,8 +1,13 @@
 name: Formatting secret
 on: 
   workflow_call:
+    inputs:
+      environment:
+        type: string
+        required: true  
+        default: staging    
     secrets:
-      PUBLISH-PROFILE:
+      PUBLISH_PROFILE:
         required: true
 
 jobs:
