--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -5,7 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       Greeting: Hello
-      First_Name: Mona    
+      First_Name: Mona 
+    steps:
+      - name: "Say Hello Mona it's Monday"
+        run: echo "$Greeting ${First_Name}!"
+         
   Secret_format_job:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
