--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,7 +20,7 @@ jobs:
           publish_profile: ${{ secrets.PUBLISH-PROFILE }}
 
       - name: 'Echoing secret'
-        run: echo "Secret name is $publish_profile  "
+        run: echo "Secret name is ${{ secrets.PUBLISH-PROFILE }}"
 
 
 
