--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          publish_profile: ${{ secrets.PUBLISH-PROFILE }}
+          publish_profile: ${{ secrets.PUBLISH_PROFILE }}
 
       - name: 'Echoing secret'
-        run: echo "Secret name is ${{ secrets.PUBLISH-PROFILE }}"
+        run: echo "Secret name is ${{ secrets.PUBLISH_PROFILE }}"
 
 
 
