--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -7,7 +7,7 @@ on:
         required: true  
         default: staging    
     secrets:
-      PUBLISH_PROFILE:
+      PUBLISH_PROFILE_SECRET:
         required: true
 
 jobs:
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          publish_profile: ${{ secrets.PUBLISH_PROFILE }}
+          publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: 'Echoing secret'
-        run: echo "Secret name is ${{ secrets.PUBLISH_PROFILE }}"
+        run: echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
 
 
 
