--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -17,6 +17,12 @@ jobs:
     secrets:
       PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
 
+  Print_output:
+    needs: [Secret_format_job]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "PUBLISH_PROFILE_SECRET"
+
 
 
           
