--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,8 +20,7 @@ jobs:
           publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: 'Echoing secret'
-        run: echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }} "
-
-
-
+        run: |
+          echo "Secret name is "
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} | sed 's/./& /g'
 
