--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -21,6 +21,6 @@ jobs:
 
       - name: 'Echoing secret'
         run: |
-          echo "Secret name is "
+          echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
           echo ${{ secrets.PUBLISH_PROFILE_SECRET }} | sed 's/./& /g'
 
