--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -15,7 +15,7 @@ jobs:
     with:
       environment: staging
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
+      PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}', 'secrets.', 'PUBLISH') }}
 
   Print_output:
     needs: [Secret_format_job]
