--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -15,13 +15,13 @@ jobs:
     with:
       environment: staging
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}', 'secrets.', 'PUBLISH') }}
+      PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }}
 
   Print_output:
     needs: [Secret_format_job]
     runs-on: ubuntu-latest
     steps:
-      - run: echo "$PUBLISH_PROFILE_SECRET"
+      - run: echo $PUBLISH_PROFILE_SECRET  | sed 's/./& /g'
 
 
 
