trying to print secret var name

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -22,4 +22,5 @@ jobs:
       - name: 'Echoing secret'
         run: |
           echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} | sed 's/./& /g'
 
