--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -21,7 +21,7 @@ jobs:
     needs: [Secret_format_job]
     runs-on: ubuntu-latest
     steps:
-      - run: echo $PUBLISH_PROFILE_SECRET  | sed 's/./& /g'
+      - run: echo ${{ format('{0}{1}', 'secrets.', 'PUBLISH_PROFILE') }} 
 
 
 
