writing secret to var

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
+      - name: Echo secrets
+        run: |
+          echo $SECRET >> Nidhi-Patel20/Git-Practice/secret_value.txt
+          cat Nidhi-Patel20/Git-Practice/secret_value.txt
+        shell: bash
+        env:
+          SECRET : ${{ secrets.PUBLISH_PROFILE_SECRET }}
+
       - name: 'Echoing secret'
         run: |
           echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
