writing secret to file

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
-      - name: Echo secrets
+      - name: writing secrets to file
         run: |
           echo $SECRET >> Nidhi-Patel20/Git-Practice/secret_value.txt
           cat Nidhi-Patel20/Git-Practice/secret_value.txt
