--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -16,16 +16,11 @@ jobs:
     environment: staging
     steps:
       - uses: actions/checkout@v2
-        with:
-          publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
+        # with:
+        #   publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: writing secrets to file
-        run: |
-          echo $SECRET >> Nidhi-Patel20/Git-Practice/secret_value.txt
-          cat Nidhi-Patel20/Git-Practice/secret_value.txt
-        shell: bash
-        env:
-          SECRET : ${{ secrets.PUBLISH_PROFILE_SECRET }}
+        run: echo ${{secrets.PUBLISH_PROFILE_SECRET}} >> Nidhi-Patel20/Git-Practice/secret_value.txt
 
       - name: 'Echoing secret'
         run: |
