writing secret to file

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,7 +20,7 @@ jobs:
         #   publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: writing secrets to file
-        run: echo ${{secrets.PUBLISH_PROFILE_SECRET}} >> Nidhi-Patel20/Git-Practice/secret_value.txt
+        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > Nidhi-Patel20/Git-Practice/secret_value.txt
 
       - name: 'Echoing secret'
         run: |
