--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,10 +20,16 @@ jobs:
         #   publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: writing secrets to file
-        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > secret_value.txt
+        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > Nidhi-Patel20/Git-Practice/.github/workflows/secret_value.txt
 
       - name: Zip artifact for deployment
         run: zip secret.zip secret_value.txt -r
+
+      # - name: Upload a Artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: secret
+      #     path: src/.env
 
       - name: 'Echoing secret'
         run: |
