archiving secret to zip file

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > Nidhi-Patel20/Git-Practice/.github/workflows/secret_value.txt
 
       - name: Zip artifact for deployment
-        run: zip secret.zip secret_value.txt -r
+        run: zip secret.zip Nidhi-Patel20/Git-Practice/.github/workflows/secret_value.txt -r
 
       # - name: Upload a Artifact
       #   uses: actions/upload-artifact@v2
