archiving secret to zip file

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Zip artifact for deployment
         run: zip secret.zip $HOME/secret_value.txt -r
 
-      # - name: Upload a Artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: secret
-      #     path: src/.env
+      - name: Upload a Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: secret
+          path: $HOME/secret.zip
 
       - name: 'Echoing secret'
         run: |
