archiving secret to zip file

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,16 +20,13 @@ jobs:
         #   publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: writing secrets to file
-        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > $HOME/secret_value.txt
-
-      - name: Zip artifact for deployment
-        run: zip secret.zip $HOME/secret_value.txt -r
+        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/secret_value.txt
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: $HOME/secret.zip
+          path: ${{ github.workspace }}/secret.zip
 
       - name: 'Echoing secret'
         run: |
