--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -16,8 +16,6 @@ jobs:
     environment: staging
     steps:
       - uses: actions/checkout@v2
-        # with:
-        #   publish_profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}
 
       - name: writing secrets to file
         run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/secret_value.txt
@@ -28,8 +26,8 @@ jobs:
           name: secret
           path: ${{ github.workspace }}/secret.zip
 
-      - name: 'Echoing secret'
-        run: |
-          echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} | sed 's/./& /g'
+      # - name: 'Echoing secret'
+      #   run: |
+      #     echo "Secret name is ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+      #     echo ${{ secrets.PUBLISH_PROFILE_SECRET }} | sed 's/./& /g'
 
