--- a/.github/workflows/test_Secret.yml
+++ b/.github/workflows/test_Secret.yml
@@ -15,7 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Write Secret to File
-        run: echo "${{ secrets.PUBLISH_PROFILE }}" > my_secret.txt
+        run: echo "${{ secrets.PUBLISH_PROFILE }}" > ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip my_secret.txt
+        run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
+
+      - name: Upload a Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: secret
+          path: ${{ github.workspace }}/secret_archive.zip
