--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,6 +20,9 @@ jobs:
       - name: writing secrets to file
         run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/secret_value.txt
 
+      - name: Archive Secret File
+        run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
+
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
