--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: writing secrets to file
-        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/secret_value.txt
+        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: ${{ github.workspace }}/secret.zip
+          path: ${{ github.workspace }}/secret_archive.zip
 
       # - name: 'Echoing secret'
       #   run: |
