--- a/.github/workflows/test_Secret.yml
+++ b/.github/workflows/test_Secret.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Write Secret to File
-        run: echo "${{ secrets.PUBLISH_PROFILE }}" > ${{ github.workspace }}/my_secret.txt
+        run: |
+          echo "${{ secrets.PUBLISH_PROFILE }}" > ${{ github.workspace }}/my_secret.txt
+          cat ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
