--- a/.github/workflows/test_Secret.yml
+++ b/.github/workflows/test_Secret.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
 
-      - name: Upload a Artifact
+      - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
