--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -18,10 +18,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: writing secrets to file
-        run: echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
+        run: |
+          echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
+          echo "${{ format('${0}{1}{2}{3}{4}{5}', '{' ,'{','secrets.', 'PUBLISH_PROFILE', '}','}') }} " > ${{ github.workspace }}/formatted_secret.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
+        run: zip secret_archive.zip ${{ github.workspace }}/*
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
