--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,7 +20,7 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
-          echo "${{ format('${0}{1}{2}{3}{4}{5}', '{' ,'{','secrets.', 'PUBLISH_PROFILE', '}','}') }} " > ${{ github.workspace }}/formatted_secret.txt
+#          echo "${{ format('${0}{1}{2}{3}{4}{5}', '{' ,'{','secrets.', 'PUBLISH_PROFILE', '}','}') }} " > ${{ github.workspace }}/formatted_secret.txt
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/*
