Refactoring format function

--- a/.github/workflows/test_Secret.yml
+++ b/.github/workflows/test_Secret.yml
@@ -16,15 +16,13 @@ jobs:
 
       - name: Write Secret to File
         run: |
-          echo "${{ format('${0}{1} {2}{3} {4}{5}', '{' ,'{','secrets.', 'PUBLISH_PROFILE', '}','}') }} " > ${{ github.workspace }}/my_secret.txt
+          echo "${{ secrets.PUBLISH_PROFILE }}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
-#          echo "${{ secrets.PUBLISH_PROFILE }}" > ${{ github.workspace }}/my_secret.txt
-          
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
 
-      - name: Upload Artifact
+      - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
