--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -15,14 +15,15 @@ jobs:
     with:
       environment: staging
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ format('{0}{1}' , 'secrets.', 'PUBLISH_PROFILE') }}
+      PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , 'PUBLISH_PROFILE')] }}
 
   Print_output:
     needs: [Secret_format_job]
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ${{ format('{0}{1}' , 'secrets.', 'PUBLISH_PROFILE') }}
+          echo ${{ secrets[format('{0}' , 'PUBLISH_PROFILE')] }}
+#          echo ${{ format('{0}{1}' , 'secrets.', 'PUBLISH_PROFILE') }}
 #          echo ${{ format('"${0}{1}{2}{3}{4}{5}"', '{' ,'{','secrets.', 'PUBLISH_PROFILE', '}','}') }} 
 
 
