--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -32,9 +32,6 @@ jobs:
       id: matrix_setup
       run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
 
-    # - name: Check
-    #   run: jq . <<< '${{ steps.setup.outputs.matrix }}'
-
   step2:
     needs: [step1]
     runs-on: ubuntu-latest
@@ -50,12 +47,12 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-        ARTIFACT_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.artifact-name, ', ') }}
-        APP_SETTINGS: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-settings.*.name, ', ') }}
+        # ARTIFACT_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.artifact-name, ', ') }}
+        # APP_SETTINGS: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-settings.*.name, ', ') }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
         echo "MATRIX: $MATRIX"
         echo "APPNAME: [$APP_NAME]"
-        echo "ARTIFACT NAME: [$ARTIFACT_NAME]"
-        echo "APP SETTINGS : [$APP_SETTINGS]"
+#        echo "ARTIFACT NAME: [$ARTIFACT_NAME]"
+#        echo "APP SETTINGS : [$APP_SETTINGS]"
 #        echo "NESTED: [$NESTED]"
