--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -47,12 +47,12 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-        # ARTIFACT_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.artifact-name, ', ') }}
+        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
         # APP_SETTINGS: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-settings.*.name, ', ') }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
         echo "MATRIX: $MATRIX"
         echo "APPNAME: [$APP_NAME]"
-#        echo "ARTIFACT NAME: [$ARTIFACT_NAME]"
+        echo "PUBLISH PROFILE NAME: [$PUBLISH_PROFILE]"
 #        echo "APP SETTINGS : [$APP_SETTINGS]"
 #        echo "NESTED: [$NESTED]"
