--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -24,7 +24,8 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}        
+        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}   
+        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}     
       run: |
         echo "MATRIX: $MATRIX"
         echo "APPNAME: $APP_NAME"
@@ -34,7 +35,7 @@ jobs:
       uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
       with:
         environment: staging
-        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
+        PUBLISH_PROFILE_SECRET: $PUBLISH_PROFILE_SECRET
         # PUBLISH_PROFILE_SECRET_2: ${{ secrets[format('{0}' , 'PUBLISH_PROFILE_2')] }}
     
   # Secret_format_job:
