--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -20,30 +20,30 @@ jobs:
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
     steps:
-    - name: get secret
-      uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-      with:
-        environment: staging
-        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }} 
-        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
-    # - name: Check
-    #   env:
-    #     MATRIX: ${{ toJSON(matrix) }}
-    #     APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-    #     PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}       
-    #   run: |
-    #     echo "MATRIX: $MATRIX"
-    #     echo "APPNAME: $APP_NAME"
-    #     echo "PUBLISH PROFILE NAME: $PUBLISH_PROFILE"
+    # - name: get secret
+    #   uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    #   with:
+    #     environment: staging
+    #     PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }} 
+    #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
+    - name: Check
+      env:
+        MATRIX: ${{ toJSON(matrix) }}
+        APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
+        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}       
+      run: |
+        echo "MATRIX: $MATRIX"
+        echo "APPNAME: $APP_NAME"
+        echo "PUBLISH PROFILE NAME: $PUBLISH_PROFILE"
 
-  # Secret_format_job:
-  #   needs: [step2]
-  #   uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-  #   with:
-  #     environment: staging
-  #   secrets:
-  #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
-      # PUBLISH_PROFILE_SECRET_2: ${{ secrets[format('{0}' , 'PUBLISH_PROFILE_2')] }}
+  Secret_format_job:
+    needs: [step2]
+    uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    with:
+      environment: staging
+    secrets:
+      PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
+
 
 
 
