--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -20,6 +20,7 @@ jobs:
       - name: writing secrets to file
         run: |
           echo " ${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
+          cat ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
