--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
         PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}     
-        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}  
+        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , env.PUBLISH_PROFILE)] }}  
       run: |
         echo "MATRIX: $MATRIX"
         echo "APPNAME: $APP_NAME"
