--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -31,7 +31,7 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-        PUBLISH_PROFILE: ${{ secrets[format('{0}' , join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}     
+        PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}     
         PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , env.PUBLISH_PROFILE)] }}  
       run: |
         echo "MATRIX: $MATRIX"
@@ -44,7 +44,6 @@ jobs:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      
     secrets:
       PUBLISH_PROFILE_SECRET: ${{ needs.step2.check_id.PUBLISH_PROFILE_SECRET }}
 
