--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -37,7 +37,7 @@ jobs:
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE= ${{ secrets[format(join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') )]}}" >> $GITHUB_ENV
-
+        echo "${{ env.PUBLISH_PROFILE }}"
   Secret_format_job:
     runs-on: ubuntu-latest
     needs: [step2]
