--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -20,12 +20,6 @@ jobs:
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
     steps:
-    # - name: get secret
-    #   uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-    #   with:
-    #     environment: staging
-    #     PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }} 
-    #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}' , '$PUBLISH_PROFILE')] }}
     - name: Check
       id: check_id
       # env:
@@ -36,23 +30,18 @@ jobs:
       run: |
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
-        echo "PUBLISH_PROFILE= ${{ secrets[format('{0}', join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') )]}}" >> $GITHUB_ENV
+        echo "PUBLISH_PROFILE= ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_ENV
         echo "${{ env.PUBLISH_PROFILE }}"
   Secret_format_job:
     runs-on: ubuntu-latest
     needs: [step2]
     steps:
       - name: use env var
-        # uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-        # with:
-        #   secrets:
-        #     PUBLISH_PROFILE_SECRET: ${{ secrets[format(join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') )]}}
-        run: echo " value of publish profile is ${{ env.PUBLISH_PROFILE }}"
-    # uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-    # with:
-    #   environment: staging
-    # secrets:
-    #   PUBLISH_PROFILE_SECRET: ${{ env.PUBLISH_PROFILE }}
+        uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+        with:
+          PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.PUBLISH_PROFILE)]}}
+        # run: echo " value of publish profile is ${{ env.PUBLISH_PROFILE }}"
+
 
 
 
