--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -39,7 +39,7 @@ jobs:
       - name: use env var
         uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
         with:
-          PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.PUBLISH_PROFILE)]}}
+          PUBLISH_PROFILE_SECRET: ${{ env.PUBLISH_PROFILE}}
         # run: echo " value of publish profile is ${{ env.PUBLISH_PROFILE }}"
 
 
