--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -22,11 +22,6 @@ jobs:
     steps:
     - name: Check
       id: check_id
-      # env:
-      #   MATRIX: ${{ toJSON(matrix) }}
-      #   APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-      #   PUBLISH_PROFILE: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}     
-      #   PUBLISH_PROFILE_SECRET: ${{ format('{0}' , env.PUBLISH_PROFILE) }}  
       run: |
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
@@ -35,7 +30,7 @@ jobs:
     
     - name: test
       run: |
-        echo "env var:  ${{ secrets[format('{0}' ,env.PUBLISH_PROFILE)] }}"
+        echo "env var:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
   #       echo ${{ secrets[env.PUBLISH_PROFILE_SECRET] }}
   # Secret_format_job:
   #   needs: [step2]
