added environment to step-2

--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -15,6 +15,7 @@ jobs:
   step2:
     needs: [step1]
     runs-on: ubuntu-latest
+    environment: staging
     outputs:
       OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE}}
     strategy:
