--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -27,21 +27,21 @@ jobs:
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-        echo "secret value:${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}" 
+        echo "SECRET=${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}" >> GITHUB_ENV
         
     - name: test
       run: |
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
 
 
-  # Secret_format_job:
-  #   needs: [step2]
-  #   uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-  #   with:
-  #     environment: staging
-  #   secrets:
-  #     PUBLISH_PROFILE_SECRET: ${{ secrets[env.PUBLISH_PROFILE] }}
-        # run: echo " value of publish profile is ${{ env.PUBLISH_PROFILE }}"
+  Secret_format_job:
+    needs: [step2]
+    uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    with:
+      environment: staging
+    secrets:
+      PUBLISH_PROFILE_SECRET: ${{ secrets[needs.step2.check_id.env.SECRET] }}
+
 
 
 
